--- a/Pages/Clients/Index.cshtml
+++ b/Pages/Clients/Index.cshtml
@@ -1,11 +1,9 @@
-﻿@page
+﻿@page "/"
 @model Tasnadi_Botond_Proiect.Pages.Clients.IndexModel
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Financial assistant";
 }
-
-<h1>Index</h1>
 
 <p>
     <a asp-page="Create">Create New</a>
