--- a/Pages/TransactionTypes/Index.cshtml
+++ b/Pages/TransactionTypes/Index.cshtml
@@ -2,11 +2,8 @@
 @model Tasnadi_Botond_Proiect.Pages.TransactionTypes.IndexModel
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Financial assistant";
 }
-
-<h1>Index</h1>
-
 <p>
     <a asp-page="Create">Create New</a>
 </p>
