--- a/Pages/Transactions/Index.cshtml
+++ b/Pages/Transactions/Index.cshtml
@@ -2,10 +2,8 @@
 @model Tasnadi_Botond_Proiect.Pages.Transactions.IndexModel
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Financial assistant";
 }
-
-<h1>Index</h1>
 
 <p>
     <a asp-page="Create">Create New</a>
